[gd_scene load_steps=4 format=3 uid="uid://c1p01esy8xx5j"]

[ext_resource type="Script" uid="uid://bmhmv2oes4cel" path="res://src/scenes/Game/Components/Walls/RespawnAreas.gd" id="1_qwace"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_bqyfw"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_rr83a"]

[node name="RespawnAreas" type="Node2D"]
script = ExtResource("1_qwace")

[node name="Ceiling" type="Area2D" parent="."]
position = Vector2(0, -892)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ceiling"]
shape = SubResource("WorldBoundaryShape2D_bqyfw")

[node name="Floor" type="Area2D" parent="."]
position = Vector2(0, 1057)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource("WorldBoundaryShape2D_rr83a")

[node name="Timer" type="Timer" parent="."]
process_callback = 0
autostart = true

[connection signal="body_entered" from="Floor" to="." method="_onFloorBodyEntered"]
[connection signal="timeout" from="Timer" to="." method="_onTimerTimeout"]
